force-app/main/default/objects/Revenue_Milestone__c/Revenue_Milestone__c.object-meta.xml
<CustomObject>
    <label>Revenue Milestone</label>
    <nameField>
        <displayFormat>RM-{0000}</displayFormat>
        <label>Revenue Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>