force-app/main/default/objects/Revenue_Milestone__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenue Milestones</relationshipLabel>
    <relationshipName>Revenue_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>