force-app/main/default/objects/Revenue_Milestone__c/fields/Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billed_Amount__c</fullName>
    <formula>Opportunity__r.Amount_to_Be_Billed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>