force-app/main/default/objects/Revenue_Milestone__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <label>Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Billed</fullName>
            </value>
            <value>
                <fullName>Deferred (Unbilled)</fullName>
            </value>
            <value>
                <fullName>Deferred (Unbilled) - To Be Billed</fullName>
            </value>
            <value>
                <fullName>Hold (Uncertain)</fullName>
            </value>
            <value>
                <fullName>Hold Uncertain - To Be Billed</fullName>
                <label>Hold (Uncertain) -  To Be Billed</label>
            </value>
            <value>
                <fullName>Shift of Unbilled to Billed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>