force-app/main/default/objects/Revenue_Milestone__c/fields/Milestone_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_End_Date__c</fullName>
    <label>Milestone End Date</label>
    <type>Date</type>
</CustomField>