force-app/main/default/objects/Revenue_Milestone__c/fields/Milestone_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Start_Date__c</fullName>
    <label>Milestone Start Date</label>
    <type>Date</type>
</CustomField>