force-app/main/default/objects/Revenue_Milestone__c/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Forecasted</fullName>
                <default>true</default>
                <label>Forecasted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>