force-app/main/default/objects/Revenue_Milestone__c/fields/Per_Day_Amount__c.field-meta.xml
<CustomField>
    <fullName>Per_Day_Amount__c</fullName>
    <label>Per Day Amount</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>