force-app/main/default/objects/Revenue_Milestone__c/fields/Total_Month_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Month_Amount__c</fullName>
    <label>Total Month Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>